[project]
name = "pyrtr"
version = "0.1.0"
description = "Resource Public Key Infrastructure (RPKI) to Router Protocol Version 1 Cache written in Python"
authors = [
    {name = "Marco Marzetti",email = "marco@lamehost.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
bandit = "^1.8.6"
pylint = "^4.0.2"


[tool.poetry.dependencies]
pydantic-settings = "^2.11.0"
